feat: Implement core X article export functionality, introduce PDF generation, and add a settings UI for theme and page size.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "x-article-exporter",
-  "displayName": "X article exporter",
+  "displayName": "X Article Exporter",
   "version": "0.0.1",
-  "description": "a lightweight, privacy-focused Chrome extension (Manifest V3 compliant) that injects an \"Export to PDF\" button on X (Twitter) Article pages, scrapes the content, generates a professional PDF with a specific structure, and downloads it locally for offline use",
+  "description": "Export X (Twitter) Articles to professionally formatted PDFs with one click. Features rich text support, clickable TOC, and dark mode.",
   "author": "korecodes",
   "scripts": {
     "dev": "plasmo dev",
@@ -10,6 +10,9 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "dompurify": "^3.3.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "plasmo": "0.90.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +20,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/chrome": "0.0.258",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
@@ -24,8 +28,14 @@
     "typescript": "5.3.3"
   },
   "manifest": {
+    "permissions": [
+      "activeTab",
+      "storage"
+    ],
     "host_permissions": [
-      "https://*/*"
+      "https://x.com/*",
+      "https://twitter.com/*",
+      "https://pbs.twimg.com/*"
     ]
   }
 }
